test(xmsf): stabilize LogUtils tests on Java 26