@@ -72,7 +72,7 @@ android {
 }
 
 tasks.withType<org.gradle.api.tasks.testing.Test>().configureEach {
-    jvmArgs("-Xshare:off")
+    jvmArgs("-Xshare:off", "--enable-native-access=ALL-UNNAMED")
     useJUnitPlatform()
 }
 
